# FED_NIDS

./: .gitignore  README.md  frontend.py  pyproject.toml
Models/final_CNNBIGRU/: client_app.py  custom_fed_avg.py  loss_strat.py  server_app.py  task.py
Models/final_CNNBIGRU_multiclass/: __init__.py  client_app.py  custom_fed_avg.py  loss_strat.py  server_app.py  task.py
Notebook and feature selection/: Taxonomy_of_Hybrid_DL_Models.ipynb  preprocessing_and_feature_selection.txt  unsw_nb15_analysis.py
baselines/cifar_10_baseline/: __init__.py  client_app.py  loss_Strat.py  server_app.py  strategy.py  task.py
baselines/cifar_10_fedprox/: __init__.py  client_app.py  server_app.py  strategy.py  task.py
baselines/fmnist_baseline/: client_app.py  loss_Strat.py  server_app.py  strategy.py  task.py
baselines/fmnist_fedprox/: client_app.py  server_app.py  strategy.py  task.py
baselines/prox/cifar_10_fedprox/: client_app.py  server_app.py  strategy.py
baselines/prox/fmnist_fedprox/: __init__.py  client_app.py  server_app.py  strategy.py  task.py
centralized models/cnn_bigru/: cnnbigru.py  cnnbigru_binary.py  cnnbigru_multiclass.py
centralized models/cnn_bigru/binary_model_hyperopt/: best_hyperparameters.json  best_model.pth  model_comparison.json  test_metrics.json
centralized models/cnn_bigru/hyperparam_tune/: cnnbigru_binary_optuna.py  (+3 more)
centralized models/cnn_bigru_attention/: cnnbigruattn.py  cnnbigruattn_binary.py  cnnbigruattn_multiclass.py
databalancing/: partition_visuals.py  split.py
dataset/: Instructions
misc/: oldtoml.toml
(+4 files in other folders)
