[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "pytorch-example"
version = "1.0.0"
description = "Federated Learning with PyTorch and Flower (Advanced Example)"
license = "Apache-2.0"
dependencies = [ "flwr[simulation]>=1.16.0", "flwr-datasets[vision]>=0.5.0", "torch==2.5.1", "torchvision==0.20.1", "wandb==0.17.8",]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.federations]
default = "local-sim-gpu"

[tool.flwr.app.components]
serverapp = "baselines.cifar_10_baseline.server_app:app"
clientapp = "baselines.cifar_10_baseline.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
strategy-type = "fedavg"
diversity-weight = 0.4
fraction-evaluate = 1
min-available-clients = 10
min-evaluate-clients = 10
local-epochs = 1
batch-size = 32
learning-rate = 0.001
verbose = false
server-device = "cpu"
use-wandb = true

[tool.flwr.federations.local-sim.options]
num-supernodes = 2

[tool.flwr.federations.local-sim-gpu.options]
num-supernodes = 10

[tool.hatch.build.targets.wheel]
packages = [ ".",]

[tool.flwr.federations.local-sim.options.backend.client-resources]
num-cpus = 2
num-gpus = 0.0

[tool.flwr.federations.local-sim-gpu.options.backend.client-resources]
num-cpus = 2
num-gpus = 0.25
